    prehistory events (long supported by \code{twinstim()} itself):
    \code{as.epidataCS()}, \code{glm_epidataCS()},
    \code{as.epidata.epidataCS()}.

    \item The \code{summary()} for SI[R]S-type \code{"epidata"} failed
    if there were initially infectious individuals.
  }
}

\subsection{DEPRECATED AND DEFUNCT}{
  \itemize{
    \item Several functions have been deprecated and may be removed in
    future versions of \pkg{surveillance}: \code{qlomax}.
  }
}


\section{Changes in surveillance version 1.16.0 (2018-01-24)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item The \code{as.data.frame()} method for \code{"sts"} objects
    gained a \code{tidy} argument, which enables conversion to the
    long data format and is also available as function \code{tidy.sts()}.

    \item A \CRANpkg{ggplot2} variant of \code{stsplot_time()} is now
    available via \code{autoplot.sts()}.
    
    \item \code{as.epidata.data.frame()} gained an argument
    \code{max.time} to specify the end of the observation period (which
    by default coincides with the last observed event).

    \item The now exported function \code{fanplot()} wraps
    \CRANpkg{fanplot}\code{::fan()}. It is used by
    \code{plot.oneStepAhead()} and \code{plot.hhh4sims()}, which now
    have an option to add the point forecasts to the fan as well.

    \item \code{plotHHH4_fitted()} (and \code{plotHHH4_fitted1()})
    gained an option \code{total} to sum the fitted components over all
    units.
  }
}

\subsection{SIGNIFICANT CHANGES}{
  \itemize{
    \item Package \CRANpkg{polyCub} is no longer automatically attached
    (only imported).

    \item \code{scores.oneStepAhead()} no longer reverses the ordering
    of the time points by default, as announced in 1.15.0.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item Some code in \code{vignette("monitoringCounts")} has been
    adjusted to work with the new version of \CRANpkg{MGLM} (0.0.9).
