@@ -1,13 +1,14 @@
 ###################################################
-### chunk number 1: 
+### chunk number 1:
 ###################################################
 
 test <- function(data = c("k1", "m5"), range = 157:339){
+  .Deprecated(package = "surveillance")
   res <- list()
   for(i in data){
     disProgObj <- readData(i,week53to52=TRUE)
     disProgObj <- enlargeData(disProgObj)
-    survResults <- algo.call(disProgObj, 
+    survResults <- algo.call(disProgObj,
                              control = list(
                                list(funcName = "rki1", range = range),
                                list(funcName = "rki2", range = range),
@@ -24,12 +25,12 @@ test <- function(data = c("k1", "m5"), range = 157:339){
 
 
 ###################################################
-### chunk number 2: 
+### chunk number 2:
 ###################################################
 
 testSim <- function(p = 0.99, r = 0.01, length = 400, A = 1, alpha = 1, beta = 0,
                                 phi = 0, frequency = 1, state = NULL, K, range = 200:400){
-
+  .Deprecated(package = "surveillance")
         disProgObj <- sim.pointSource(p, r, length, A, alpha, beta,
                                 phi, frequency, state, K)
         survResults <- algo.call(disProgObj, control = list(list(funcName = "rki1", range = range)))
@@ -43,10 +44,11 @@ testSim <- function(p = 0.99, r = 0.01, length = 400, A = 1, alpha = 1, beta = 0
 
 
 ###################################################
-### chunk number 3: 
+### chunk number 3:
 ###################################################
 
 makePlot <- function(outputpath, data = "k1", method = "rki1", name, disease, range = 157:339){
+  .Deprecated(package = "surveillance")
         disProgObj <- readData(data,week53to52=TRUE)
         disProgObj <- enlargeData(disProgObj)
         res <- algo.call(disProgObj, control = list(list(funcName = method, range = range)))
@@ -54,6 +56,3 @@ makePlot <- function(outputpath, data = "k1", method = "rki1", name, disease, ra
                 plot(res[[1]],name,disease)
         dev.off()
 }
-
-
-
