@@ -1,4 +1,4 @@
-\name{testSim}
+\name{testSim-deprecated}
 \alias{testSim}
 \encoding{latin1}
 \title{Print xtable for a Simulated Disease and the Summary}
